--- a/index.html
+++ b/index.html
@@ -568,7 +568,6 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#contact">Contact</a></li>
-                 
                     <li><a href="book-appointment.html" class="button">Book Now</a></li>
                 </ul>
             </nav>
@@ -581,8 +580,7 @@
                 <h1>Fade pati <span>feelings.</span></h1>
                 <p>New trim, new energy.</p>
                 <div class="hero-buttons">
-                    <a href="https://iamthebarber.setmore.com/?fbclid=IwY2xjawLX7zdleHRuA2FlbQIxMABicmlkETF5aUJYTFlqTHNHZ2twVlREAR5s8ig2FYmUpeeD6k_jPwT9IG9KUTWmj9PRfzQSw945GPVYln1MySDD_5EWxA_aem_JUpnQwZu-LsmNOm6R_eWOQ" class="button">Book Appointment</a>
-                    <!--<a href="book-appointment.html" class="button">Book Appointment</a>-->
+                    <a href="book-appointment.html" class="button">Book Appointment</a>
                     <a href="#services" class="button outline">Our Services</a>
                 </div>
             </div>
@@ -615,8 +613,7 @@
         <section id="book-appointment-section">
             <div class="container">
                 <h2>Book Your <span>Appointment</span></h2>
-                <a href="https://iamthebarber.setmore.com/?fbclid=IwY2xjawLX7zdleHRuA2FlbQIxMABicmlkETF5aUJYTFlqTHNHZ2twVlREAR5s8ig2FYmUpeeD6k_jPwT9IG9KUTWmj9PRfzQSw945GPVYln1MySDD_5EWxA_aem_JUpnQwZu-LsmNOm6R_eWOQ" class="button">Book Now</a>
-                <!--<a href="book-appointment.html" class="button">Book Now</a>-->
+                <a href="book-appointment.html" class="button">Book Now</a>
             </div>
         </section>
 
