--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         :root {
-    --primary-color: #f75d59; /* Red/Pink from buttons */
-    --dark-background: #2c2c2c; /* Dark background color for most sections */
-    --alternate-background: #1a1a1a; /* Darker background for alternating sections (header, footer, book appointment) */
-    --light-text: #f0f0f0; /* Light grey for general text */
-    --card-background: #3a3a3a; /* Darker grey for service/contact cards */
+    --primary-color: #f75d59;
+    --dark-background: #2c2c2c;
+    --alternate-background: #1a1a1a;
+    --light-text: #f0f0f0; 
+    --card-background: #3a3a3a;
         }
 
         * {
